# Magisterka

./: .gitignore  .gitmodules  CMakeLists.txt  Julia.jl  Numba.py  OpenCL.cpp  OpenMP.cpp  README.md  SYCL.cpp  clang-format.txt  cuda.cu
data/: graph.txt
include/algorithms/: delta.hpp
include/containers/: AdjeacenacyMatrix.hpp  CSR.hpp
include/logger/: LogContainer.hpp  LogFileWriter.hpp  LogFlags.hpp  LogLine.hpp  LogType.hpp  LogWritter.hpp  Logger.hpp
src/: CMakeLists.txt  logs.txt  main.cpp
src/algorithms/: CMakeLists.txt  delta.cpp
src/containers/: AdjeacenacyMatrix.cpp  CMakeLists.txt  CSR.cpp
src/logger/: CMakeLists.txt  LogContainer.cpp  LogFileWriter.cpp  Logger.cpp
